Functional working prototype for connecting to AWS cognito.

--- a/staff/docker-compose.yml
+++ b/staff/docker-compose.yml
@@ -34,6 +34,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    env_file:
+      - .env
     environment:
       LOWDEFY_SECRET_PG_CONNECTION_STRING: postgresql://postgres:incredible_local_secret_phrase@postgres:5432/postgres?schema=public
     init: true
