--- a/staff/lowdefy.yaml
+++ b/staff/lowdefy.yaml
@@ -13,7 +13,38 @@ app:
       _ref: public/header.html
 
 config:
-  homePageId: recertifications
+  homePageId: login
+
+  # Configure OpenID Connect provider.
+  # See https://docs.lowdefy.com/users-introduction
+  # In the OpenID Connect provider, you must set the following:
+  # - Allowed callback urls: `http(s)://<domain>:<port>/auth/openid-callback`
+  #   Note: This is the default lowdefy auth callback
+  #         For local development, add `http://localhost:<port>/auth/openid-callback`
+  # - Allowed logout urls: `http(s)://<domain>:<port>/login`
+  #   Note: This is configured in the following lines
+  #         For local development, add `http://localhost:<port>/login`
+  auth:
+    openId:
+      # The url the user should be redirected to after logout.
+      logoutRedirectUri: /login
+      # Field in the user idToken that contains the roles array.
+      # rolesField: [string]
+      # The OpenID Connect scope to request. The default is 'openid profile email'.
+      # scope: [string]
+      scope: openid email
+    # jwt:
+    #   # The length of time a user token should be valid.
+    #   expiresIn: [string | number]
+    pages:
+      # Either set all pages as protected, or list specific protected pages.
+      # protected: [boolean | string[]]
+      # Either set all pages as public, or list specific public pages.
+      # public: [boolean | string[]]
+      public: ["404", "login"]
+    # roles:
+    #   # Restrict pages to only users with a certain role.
+    #   {roleName}: string[]
 
 # Include the list of non-out-of-the-box block types this application uses
 types:
@@ -35,8 +66,16 @@ pages:
       path: templates/page_template.yml
       # Pass in variables that the template ingests
       vars:
+        id: login
+        title: Login
+        content:
+          # The content for this page that gets injected into the template
+          - _ref: pages/login.yml
+
+  - _ref:
+      path: templates/page_template.yml
+      vars:
         id: recertifications
         title: Montana WIC Staff Portal
         content:
-          # The content for this page that gets injected into the template
           - _ref: pages/recert.yml
