Revert changes to participant docker-compose.yml.

--- a/participant/docker-compose.yml
+++ b/participant/docker-compose.yml
@@ -30,9 +30,10 @@ services:
       - "3003:3000"
       - "6066:6006"
     volumes:
-      # Selectively mount directories for faster local development.
-      - ./app:/home/node/remix/app
-      - ./prisma:/home/node/remix/prisma
+      # Mount the app directory for faster local development.
+      - ./:/home/node/remix
+      # Use a named volume for the node_modules so that the container uses the guest machine's node_modules dir instead of the host machine's node_modules directory, which might be divergent.
+      - remix_dev_nodemodules:/home/node/remix/node_modules
 
   remix_prod:
     build:
