--- a/staff/docker-compose.e2e.yml
+++ b/staff/docker-compose.e2e.yml
@@ -34,9 +34,9 @@ services:
     build:
       target: dev
       context: ../participant
-    command: [ "npm", "run", "dev:dbreset" ]
+    command: ["npm", "run", "dev:dbreset"]
     depends_on:
-      database-e2e:
+      database:
         condition: service_healthy
     environment:
       DATABASE_URL: postgresql://postgres:incredible_local_secret_phrase@database-e2e:5432/postgres?schema=public
