--- a/participant/docker-compose.yml
+++ b/participant/docker-compose.yml
@@ -27,9 +27,9 @@ services:
         condition: service_healthy
     environment:
       DATABASE_URL: postgresql://postgres:incredible_local_secret_phrase@postgres:5432/postgres?schema=public
-      S3_ENDPOINT_URL: s3.localhost.localstack.cloud:4566
-      AWS_ACCESS_KEY_ID: ""
-      AWS_SECRET_ACCESS_KEY: ""
+      S3_ENDPOINT_URL: http://s3.s3_local:4566
+      AWS_ACCESS_KEY_ID: "test"
+      AWS_SECRET_ACCESS_KEY: "test"
       MAX_UPLOAD_FILECOUNT: 5
       MAX_UPLOAD_SIZE_BYTES: 5242880
     init: true
@@ -65,6 +65,7 @@ services:
       AWS_DEFAULT_REGION: us-west-2
       DATA_DIR: /tmp/localstack/data
       S3_DIR: /tmp/localstack/s3
+      HOSTNAME_EXTERNAL: s3_local
     ports:
       - "4566:4566"
     volumes:
@@ -74,6 +75,8 @@ services:
         aliases:
           - s3.localhost.localstack.cloud
           - participant-uploads.localhost.localstack.cloud
+          - s3.s3_local
+          - participant-uploads.s3.s3_local
 
 volumes:
   remix_dev_nodemodules:
