[PRP-221] Trying to capture docker logs for playwright app container

--- a/.github/workflows/ci-participant-portal.yml
+++ b/.github/workflows/ci-participant-portal.yml
@@ -113,6 +113,10 @@ jobs:
         with:
           useLockFile: false
           working-directory: ./participant
+      - name: Collect Docker Logs
+        uses: jwalton/gh-docker-logs@v2.2.1
+        with:
+          images: 'participant-app-e2e'
 
       - name: 🐳 Run Playwright in Docker Compose
         run: npm run e2e
