--- a/participant/docker-compose.e2e.yml
+++ b/participant/docker-compose.e2e.yml
@@ -36,13 +36,13 @@ services:
     depends_on:
       database:
         condition: service_healthy
-      s3_local:
-        condition: service_healthy
+      s3-local:
+        condition: service_started
     environment:
       DATABASE_URL: postgresql://postgres:incredible_local_secret_phrase@database:5432/postgres?schema=public
-      S3_ENDPOINT_URL: http://s3.s3_local:5566
-      AWS_ACCESS_KEY_ID: "test"
-      AWS_SECRET_ACCESS_KEY: "test"
+      S3_ENDPOINT_URL: http://s3-local:9000
+      AWS_ACCESS_KEY_ID: "e2e_minio"
+      AWS_SECRET_ACCESS_KEY: "incredible_local_secret_phrase"
       MAX_UPLOAD_FILECOUNT: 5
       MAX_UPLOAD_SIZE_BYTES: 5242880
       PORT: 3005
@@ -59,27 +59,20 @@ services:
       - 3005:3005
 
   # Create an S3 Localstack server for e2e tests
-  s3_local:
-    image: localstack/localstack:latest
-    environment:
-      SERVICES: s3
-      AWS_DEFAULT_REGION: us-west-2
-      EDGE_PORT: 5566
-      HOSTNAME_EXTERNAL: s3_local
-    healthcheck:
-      test: "curl -f http://localhost.localstack.cloud:5566/_localstack/health || exit 1"
-      timeout: 5s
-      retries: 5
+  s3-local:
+    image: minio/minio
     ports:
-      - "5566:5566"
+      - "9090:9000"
+      - "9091:9001"
+    volumes:
+      - minio_storage:/data
+    environment:
+      MINIO_ROOT_USER: e2e_minio
+      MINIO_ROOT_PASSWORD: incredible_local_secret_phrase
+    command: server --console-address ":9001" /data
     networks:
-      participant_portal-e2e:
-        aliases:
-          - s3.localhost.localstack.cloud
-          - s3.s3_local
-          - participant-uploads.s3.s3_local
-
-  # Create the playwright container
+      - participant_portal-e2e
+    # Create the playwright container
   playwright:
     build:
       # Use a different Dockerfile specifically to build a slim container just for playwright
@@ -101,3 +94,6 @@ services:
 
 networks:
   participant_portal-e2e:
+
+volumes:
+  minio_storage:
