--- a/staff/docker-compose.e2e.yml
+++ b/staff/docker-compose.e2e.yml
@@ -34,7 +34,7 @@ services:
     build:
       target: dev
       context: ../participant
-    command: ["npm", "run", "dev:dbreset"]
+    command: [ "npm", "run", "dev:dbreset" ]
     depends_on:
       database:
         condition: service_healthy
@@ -53,6 +53,8 @@ services:
     depends_on:
       database:
         condition: service_healthy
+      s3-local:
+        condition: service_started
     environment:
       LOWDEFY_SECRET_PG_CONNECTION_STRING: postgresql://postgres:incredible_local_secret_phrase@database:5432/postgres?schema=public
     # Check that the lowdefy server is up and running
@@ -69,26 +71,19 @@ services:
       - 3123:3000
 
   # Create an S3 Localstack server for e2e tests
-  s3_local:
-    image: localstack/localstack:latest
-    environment:
-      SERVICES: s3
-      AWS_DEFAULT_REGION: us-west-2
-      EDGE_PORT: 6566
-      HOSTNAME_EXTERNAL: s3_local
-    healthcheck:
-      test: "curl -f http://localhost.localstack.cloud:6566/_localstack/health || exit 1"
-      timeout: 5s
-      retries: 5
+  s3-local:
+    image: minio/minio
     ports:
-      - "6566:6566"
+      - "9095:9000"
+      - "9096:9001"
+    volumes:
+      - minio_storage:/data
+    environment:
+      MINIO_ROOT_USER: e2e_minio
+      MINIO_ROOT_PASSWORD: incredible_local_secret_phrase
+    command: server --console-address ":9001" /data
     networks:
-      staff-e2e:
-        aliases:
-          - s3.localhost.localstack.cloud
-          - s3.s3_local
-          - participant-uploads.s3.s3_local
-
+      - staff-e2e
   # Create the playwright container
   playwright:
     build:
