--- a/staff/docker-compose.e2e.yml
+++ b/staff/docker-compose.e2e.yml
@@ -77,7 +77,7 @@ services:
       - "9095:9000"
       - "9096:9001"
     volumes:
-      - minio_storage:/data
+      - minio_storage_staff:/data
     environment:
       MINIO_ROOT_USER: e2e_minio
       MINIO_ROOT_PASSWORD: incredible_local_secret_phrase
@@ -107,3 +107,7 @@ services:
 
 networks:
   staff-e2e:
+
+
+volumes:
+  minio_storage_staff:
