Display local agency name as an h2.

--- a/staff/pages/recert.yml
+++ b/staff/pages/recert.yml
@@ -23,13 +23,28 @@ requests: # Requests defines all the data requests made available in this page c
       parameters:
         user_id:
           _user: sub
+  - id: get_local_agency
+    type: KnexRaw
+    connectionId: postgres
+    properties:
+      query: select la.name
+        from local_agencies la
+        left join staff_users su on (la.local_agency_id = su.local_agency_id)
+        where su.user_id = :user_id
+        limit 1;
+      parameters:
+        user_id:
+          _user: sub
+
 events:
   # A list of actions that gets completed each time this lowdefy context is loaded
   onInitAsync:
     - id: fetch_data
       type: Request
-      # Execute the `get_data` request
-      params: get_data
+      # Execute the requests
+      params:
+        - get_data
+        - get_local_agency
 
 blocks:
   # We prefer sizeColumnsToFit over autoSize, but leaving this in case we change our mind.
@@ -42,6 +57,17 @@ blocks:
   #         params:
   #           blockId: table
   #           method: autoSize
+
+  - id: agency_name
+    type: Title
+    properties:
+      content:
+        _nunjucks:
+          template: |
+            Agency: {{ name }}
+          on:
+            _request: get_local_agency.rows.0
+      level: 2
 
   - id: fit_to_size_button
     type: Button
