Add script command for successfully sideloading.

--- a/participant/package.json
+++ b/participant/package.json
@@ -25,7 +25,8 @@
     "storybook:build": "build-storybook",
     "storybook:docker": "docker compose up -d remix_dev && docker compose exec remix_dev npm run storybook",
     "typecheck": "tsc",
-    "chromatic": "npx chromatic --project-token f2d5a7998246"
+    "chromatic": "npx chromatic --project-token f2d5a7998246",
+    "seed-staff-users": "npx ts-node --require tsconfig-paths/register --compiler-options '{\"module\":\"CommonJS\"}' prisma/seed-staff-users.ts"
   },
   "browserslist": [
     "defaults"
