--- a/participant/package.json
+++ b/participant/package.json
@@ -35,6 +35,7 @@
     "/public/build"
   ],
   "dependencies": {
+    "@jonkoops/matomo-tracker-react": "^0.7.0",
     "@prisma/client": "^4.5.0",
     "@remix-run/express": "^1.7.6",
     "@remix-run/node": "^1.7.6",
