--- a/participant/package.json
+++ b/participant/package.json
@@ -58,6 +58,7 @@
     "i18next-http-backend": "^2.0.2",
     "isbot": "^3.6.5",
     "lodash": "^4.17.21",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
