--- a/staff/docker-compose.yml
+++ b/staff/docker-compose.yml
@@ -27,6 +27,13 @@ services:
       MINIO_ROOT_PASSWORD: incredible_local_secret_phrase
     command: server --console-address ":9001" /data
 
+  createbuckets:
+    image: minio/mc
+    depends_on:
+      - s3-local
+    entrypoint: >
+      /bin/sh -c "/usr/bin/mc config host add myminio http://s3-local:9000 e2e_minio incredible_local_secret_phrase; /usr/bin/mc mb myminio/participant-data; exit 0; "
+
   lowdefy_dev:
     build:
       target: dev
@@ -57,7 +64,7 @@ services:
     build:
       target: dev
       context: ../participant
-    command: ["npm", "run", "dev:dbreset"]
+    command: [ "npm", "run", "dev:dbreset" ]
     depends_on:
       postgres:
         condition: service_healthy
