lint and suggested fixes

--- a/participant/docker-compose.yml
+++ b/participant/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       S3_ENDPOINT_URL: http://s3-local:9000
       AWS_ACCESS_KEY_ID: "e2e_minio"
       AWS_SECRET_ACCESS_KEY: "incredible_local_secret_phrase"
-      MATOMO_URL_BASE: "https://analytics.wic-services.org/"
+      MATOMO_URL_BASE: "http://localhost:8080/"
     init: true
     ports:
       - "3010:3000"
