--- a/participant/package.json
+++ b/participant/package.json
@@ -20,9 +20,9 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "e2e": "../bin/run-e2e.sh test",
-    "e2e:remix": "npm install && npx remix-serve build/",
     "e2e:update": "../bin/run-e2e.sh update",
     "e2e:cleanup": "../bin/run-e2e.sh cleanup",
+    "serve": "npx remix-serve build/",
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook",
     "storybook:docker": "docker compose up -d remix_dev && docker compose exec remix_dev npm run storybook",
