make sure all envs have access to matomo url

--- a/participant/.env.example
+++ b/participant/.env.example
@@ -13,3 +13,5 @@ MAX_UPLOAD_FILECOUNT=5
 AWS_ACCESS_KEY_ID=e2e_minio
 AWS_SECRET_ACCESS_KEY=incredible_local_secret_phrase
 S3_PRESIGNED_URL_EXPIRATION=300
+MATOMO_URL_BASE=http://localhost:8080/
+MATOMO_SECURE=false
