--- a/participant/package.json
+++ b/participant/package.json
@@ -66,6 +66,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
     "react-number-format": "^5.1.2",
+    "react-promise-tracker": "^2.1.1",
+    "react-spinners": "^0.13.8",
     "remix-i18next": "^4.2.0",
     "remix-image": "^1.3.3",
     "remix-utils": "^6.3.0",
