Create pdfs, but they must all be portrait.

--- a/participant/package.json
+++ b/participant/package.json
@@ -65,6 +65,7 @@
     "lodash": "^4.17.21",
     "mime": "^3.0.0",
     "nanoid": "^4.0.2",
+    "pdfkit": "^0.13.0",
     "pino": "^8.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -106,6 +107,7 @@
     "@types/lodash": "^4.14.191",
     "@types/mime": "^3.0.1",
     "@types/node": "^18.11.13",
+    "@types/pdfkit": "^0.12.9",
     "@types/pino": "^7.0.5",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
