[PRP-309] Now with more real logging 🪵

--- a/participant/docker-compose.e2e.yml
+++ b/participant/docker-compose.e2e.yml
@@ -48,6 +48,7 @@ services:
       MAX_UPLOAD_FILECOUNT: 5
       MAX_UPLOAD_SIZE_BYTES: 5242880
       NODE_ENV: development
+      LOG_LEVEL: info
       PORT: 3005
     # Check that the remix server is up and running
     healthcheck:
