--- a/participant/package.json
+++ b/participant/package.json
@@ -62,6 +62,7 @@
     "isbot": "^3.6.5",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
+    "pino": "^8.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
@@ -122,6 +123,7 @@
     "js-image-generator": "^1.0.4",
     "npm-run-all": "^4.1.5",
     "object-to-formdata": "^4.4.2",
+    "pino-pretty": "^10.0.0",
     "playwright-core": "^1.30.0",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
