--- a/participant/docker-compose.yml
+++ b/participant/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       MAX_UPLOAD_FILECOUNT: 5
       MAX_UPLOAD_SIZE_BYTES: 5242880
       MATOMO_URL_BASE: "http://localhost:8080/"
+      LOG_LEVEL: debug
     init: true
     ports:
       - "3003:3000"
@@ -59,6 +60,7 @@ services:
       AWS_ACCESS_KEY_ID: "e2e_minio"
       AWS_SECRET_ACCESS_KEY: "incredible_local_secret_phrase"
       MATOMO_URL_BASE: "http://localhost:8080/"
+      LOG_LEVEL: warn
     init: true
     ports:
       - "3010:3000"
