--- a/participant/docker-compose.yml
+++ b/participant/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       AWS_SECRET_ACCESS_KEY: "incredible_local_secret_phrase"
       MAX_UPLOAD_FILECOUNT: 5
       MAX_UPLOAD_SIZE_BYTES: 5242880
-      MATOMO_URL_BASE: "http://localhost:8080/"
+      MATOMO_URL_BASE: "localhost:8080"
       LOG_LEVEL: debug
     init: true
     ports:
@@ -59,7 +59,7 @@ services:
       S3_ENDPOINT_URL: http://s3-local:9000
       AWS_ACCESS_KEY_ID: "e2e_minio"
       AWS_SECRET_ACCESS_KEY: "incredible_local_secret_phrase"
-      MATOMO_URL_BASE: "http://localhost:8080/"
+      MATOMO_URL_BASE: "localhost:8080"
       LOG_LEVEL: warn
     init: true
     ports:
